@@ -1,3 +1,15 @@
+2010-05-20  Diego Gonzalez  <diegohcg@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] QtTestBrowser does not support websites which requires HTTP Authentication via dialogs
+        https://bugs.webkit.org/show_bug.cgi?id=38456
+
+        * QtTestBrowser/webpage.cpp:
+        (WebPage::WebPage):
+        (WebPage::authenticationRequired):
+        * QtTestBrowser/webpage.h:
+
 2010-05-20  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Eric Seidel.
